--- a/retrofit-demo/retrofit-auth-demo/pom.xml
+++ b/retrofit-demo/retrofit-auth-demo/pom.xml
@@ -31,9 +31,15 @@
             <version>2.9.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.6.13</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
